# ja-word-count-python

./: README.md  main.py  pyproject.toml
