[tool.poetry]
name = "ja-word-count-python"
version = "0.1.0"
description = "***"
authors = ["***"]

[tool.poetry.dependencies]
python = "^3.9"
SudachiPy = "^0.4.9"
SudachiDict-core = "^20200722"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
